1.1.1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented support for several definition managers through ezcPersistentMultiManager.
- Implemented suggestion #8595: Singleton for ezcPersistentSession.	
- Implemented suggestion #8526: retreiving the dbHandler from the persistentObject for transaction support
- Fixed #8489: absolute path in the "cannot find definition file" exception message.
- Fixed #8663: Undeclared property "type" used instead of "propertyType" in ezcPersistentObjectProperty.
	       This property is not used until now. And causes no change in the usage of the system.
- Added the method ezcPersistentFindIterator::flush method that flushes the rest of the resultset from
  an iterator. This method must be called if you decide not to loop over the complete resultset of an iterator.
	
1.1 - Monday 12 June 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed small CS issues.


1.1rc1 - Monday 29 May 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature request 8248: ezcPersistentSession should throw more
  descriptive exceptions.


1.1beta1 - Tuesday 09 May 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed #7884: ezcPersistentSession sometimes triggers PDO "General error:
  2014" exceptions.
- Fixed #8042: PersistentObject requires use of database ID counter.

  *Note:* The change involves a slight BC incompatible change.
  ezcPersistentIdentifierGenerator is no longer an interface but an abstract
  class. Implementors must change 'implements' to 'extends' to reflect this.

- Added ezcPersistentManualGenerator which can be used to set the ID's of new
  object manually.


1.0.1 - Monday 20 February 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed #7845: Find fetches all columns and not just the required columns.

