@@ -10,3 +10,7 @@ Frederik Holljen
 Derick Rethans
 Vadym Savchuk
 Tobias Schlitt
+
+Contributors:
+-------------
+Joel Arvidsson
