@@ -1,6 +1,7 @@
 1.1.1 - [RELEASEDATE]
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
+- Implemented #8664: ezcPersistentSession: Cast values and skip undefined properties. Patch by Joel Arvidsson.
 - Implemented support for several definition managers through ezcPersistentMultiManager.
 - Implemented suggestion #8595: Singleton for ezcPersistentSession.	
 - Implemented suggestion #8526: retreiving the dbHandler from the persistentObject for transaction support
